mgr/dashboard: fix the landing page layout issues
We were following a row-col grid layout for the landing page.
First row includes Details, Status and Capacity
Second row for Inventory and Cluster Utilization

So if one of the item in the first row increases, it pushes the entire
second row downwards.

To fix this, I made a col-row grid.

First col has Details and Inventory in two rows.
Second col has Status and Capacity as a col and Cluster Utilization as a
single row

Fixes: https://tracker.ceph.com/issues/62961

(cherry picked from commit 3f904b0a658e3759ef00fdd5a95f6ecf5ba76718)

 Conflicts:
	src/pybind/mgr/dashboard/frontend/src/app/ceph/dashboard-v3/dashboard/dashboard-v3.component.html
  - Accept the incoming change

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/dashboard-v3/dashboard/dashboard-v3.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/dashboard-v3/dashboard/dashboard-v3.component.scss
@@ -1,67 +1,38 @@
-.alerts {
-  height: 17rem;
+.details {
+  font-size: larger;
 
-  div {
-    padding-top: 0;
+  dt {
+    margin-bottom: 0.3rem;
+  }
+
+  dd {
+    margin-bottom: 0.8rem;
   }
 }
 
-div {
-  padding-top: 20px;
-}
-
-ngx-simplebar {
-  height: 18rem;
-}
-
-hr {
-  margin-bottom: 2px;
-  margin-top: 2px;
-}
-
-.position-right {
-  margin-left: auto;
-  order: 2;
-}
-
-.center-content {
-  align-items: center;
-  margin-top: 30px;
-  position: relative;
-}
-
-button.dropdown-toggle {
-  position: relative;
-
-  &::after {
-    border: 0;
-    content: '\f054';
-    font-family: 'ForkAwesome';
-    font-size: 1rem;
+.status {
+  .viewAlert {
     position: absolute;
-    right: 20px;
-    transition: transform 0.3s ease-in-out;
+    right: 2rem;
+    top: 2rem;
+  }
+}
+
+.alerts {
+  ngx-simplebar {
+    height: 13.5rem;
+    overflow-x: hidden;
   }
 
-  &[aria-expanded='true']::after {
-    transform: rotate(90deg);
-  }
-
-  &:focus {
-    box-shadow: none;
+  .text-truncate {
+    -webkit-box-orient: vertical; /* stylelint-disable-line property-no-vendor-prefix */
+    display: -webkit-box; /* stylelint-disable-line value-no-vendor-prefix */
+    -webkit-line-clamp: 2;
+    white-space: normal;
   }
 }
 
 .list-group-item {
   border: 0;
-}
-
-dt {
-  font-size: larger;
-  margin-bottom: 0.3rem;
-}
-
-dd {
-  font-size: larger;
-  margin-bottom: 0.8rem;
+  font-size: 14px;
 }
